[package]
name = "stopper"
version = "0.2.4"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "an async stream and future stopper mechanism"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/stopper"

[dependencies]
futures-lite = "2.0.1"
event-listener = "4.0.0"
pin-project-lite = "0.2.13"

[dev-dependencies]
async-io = "2.2.0"
